--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,12 +13,10 @@
 
 include: package:lints/recommended.yaml
 
-# Uncomment the following section to specify additional rules.
-
-# linter:
-#   rules:
-#     - camel_case_types
-
+# Specify additional rules.
+linter:
+  rules:
+    - public_member_api_docs
 # analyzer:
 #   exclude:
 #     - path/to/excluded/files/**
