--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.1
 repository: https://github.com/MostafaSensei106/FP-Growth
 homepage: https://github.com/MostafaSensei106/FP-Growth
 
-license: GPL-version 3.0
+license: GPL-3.0-or-later
 topics:
   [
     dart-cli,
